unpackaged/main/default/objects/Article_Feedback__c/Article_Feedback__c.object-meta.xml
<CustomObject>
    <description>Append-only free-text feedback left with a helpfulness vote on a knowledge article in the NexS help center. The thumbs themselves live on the native Vote object; this captures the &quot;why&quot;. Article_Id__c holds the version-stable Knowledge__ka Id.</description>
    <label>Article Feedback</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Article Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>