unpackaged/main/default/objects/Article_Feedback__c/fields/Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_Title__c</fullName>
    <description>Denormalized article title at the time feedback was left, so reports read without Id lookups.</description>
    <label>Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>