unpackaged/main/default/objects/Article_Feedback__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>The reader&#39;s free-text feedback (&quot;What could be better?&quot;).</description>
    <label>Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>