unpackaged/main/default/objects/Article_Feedback__c/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <description>Where the feedback was left: &#39;Internal&#39; (core app) or the Experience Cloud network name.</description>
    <label>Surface</label>
    <length>80</length>
    <type>Text</type>
</CustomField>