unpackaged/main/default/objects/Article_Feedback__c/fields/Vote_Type__c.field-meta.xml
<CustomField>
    <fullName>Vote_Type__c</fullName>
    <description>The helpfulness vote this comment accompanied (Up = helpful, Down = not helpful).</description>
    <label>Vote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>