unpackaged/main/default/objects/Article_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article_Title__c</columns>
    <columns>Vote_Type__c</columns>
    <columns>Comment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Surface__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>